Refatorar: Remover comentário desnecessário sobre a margem em about.html

--- a/views/about.html
+++ b/views/about.html
@@ -16,7 +16,7 @@
             margin-bottom: 20px;
         }
         .about h1, .about h2, .about p {
-            margin: 10px 50px; /* Ajusta a margem dos textos */
+            margin: 10px 50px;
             text-align: center;
         }
         .badge-container {
