Refatorar: Traduzir rótulo de 'Connected Database' para 'DB Conectada' em leaves.html

--- a/views/leaves.html
+++ b/views/leaves.html
@@ -107,7 +107,7 @@
                 </div>
                 <div class="operation-item">
                     <input type="checkbox" id="connected-database">
-                    <label for="connected-database" class="operation-item">Connected Database</label>
+                    <label for="connected-database" class="operation-item">DB Conectada</label>
                 </div>
             </section>                        
             <button class="execute-button" style="opacity: 0%; pointer-events: none;" onclick="executeCustomLoading(); executeCommands(modeName); uploadImage(modeName);">Executar</button>
